# agentteams

./: .gitignore  .goosehints  AGENTS.md  CHANGELOG.md  CHANGES_2026-05-27.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  STABILITY.md  agentteams.1  bridge-offline-investigation.md  build-team-plan.md  build-team-steps.csv  build_team.py  continue-dev-integration-report.md  goose-integration-plan.md  mkdocs.yml  pyproject.toml  refactor-next-phases.md  refactor-plan.md  refactor-remaining-plan.md  security-waiver-remediation-plan.md  tool-enrichment-steps.csv
.claude/: CLAUDE.md  README.md  agent-team.md  quickstart-snippet.md
.claude/agents/: SETUP-REQUIRED.md  adversarial.md  agent-refactor.md  agent-updater.md  cleanup.md  navigator.md  (+24 more)
.github/: CODEOWNERS  SECURITY.md
.goose/: README.md
agentteams/: __init__.py  _utils.py  advisory.py  ai_bad_habits.py  analyze.py  architecture.py  atomicio.py  audit.py  backup.py  baseline.py  behavioral_drift.py  bridge.py  bridge_sources.py  bridge_subagents.py  bridge_subagents_goose.py  budget.py  code_index.py  code_sources.py  convert.py  drift.py  emit.py  errors.py  eval_suite.py  fence_inject.py  fences.py  fleet.py  framework_research.py  git_hooks.py  goose_config.py  graph.py  handoff_payloads.py  hooks_emit.py  host_features.py  ingest.py  instructions_split.py  interop.py  liaison_logs.py  man.py  manifest_format.py  mcp_detect.py  (+22 more)
docs/: 404.html  DESCRIPTION-FORMAT.md  cli-reference.md  contributing.md  examples.md  how-it-works.md  index.html  index.md  sitemap.xml  template-authoring.md
docs_src/: DESCRIPTION-FORMAT.md  agent-assisted-setup.md  bridge-ci-automation-guide.md  claude-code-cheat-sheet.md  claude-privileges.md  cli-reference.md  contributing.md  copilot-privileges.md  cross-repository-coordination-guide.md  delivery-procedure.md  enrichment-pipeline-guide.md  examples.md  getting-started.md  goose-cheat-sheet.md  goose-cloud-providers.md  goose-privileges.md  goose-runtime-pattern-guide.md  goose-system-prep.md  how-it-works.md  index.md  interoperability-patterns-guide.md  interoperability.md  manuscript.md  migration-guide.md  post-production-auditor-guide.md  runtime-security-guide.md  section-fencing-guide.md  security-hardening-guide.md  stale-detection-guide.md  structural-update-plan.md  template-authoring.md  update-compatibility-maintenance-guide.md  update-lifecycle-guide.md  verification-environment.md  working-with-your-generated-team-guide.md
guides/: vscode-copilot-setup-guide.html
references/: SELF-BUILD-DESCRIPTOR.md  _self-build-description.template.json  adjacent-repos.md  agentteams-remediation-log.csv  ai-bad-habits-watch.md  architecture-graph.md  bridge-refresh-safety.md  changelog-review-2026-05-11.conflict.csv  claude-agent-infrastructure-expert.md  copilot-agent-infrastructure-expert.md  filing-conventions.md  fleet-update-authorization-policy.md  fleet-update-scope-boundary.md  git-procedures.md  goose-backend-switcher.md  goose-bridge-remediation-2026-06-22.adversarial.md  goose-bridge-remediation-2026-06-22.conflict-audit.md  goose-open-items-2026-06-22.adversarial.md  goose-open-items-2026-06-22.conflict-audit.md  goose-openrouter-test-2026-06-22.adversarial.md  goose-openrouter-test-2026-06-22.conflict-audit.md  goose-source-model-switch-2026-06-22.adversarial.md  goose-source-model-switch-2026-06-22.conflict-audit.md  mcp-auto-detection-report.md  phase4-goose-native-design.md  pr-recipients.json  security-decisions.log.csv  security-posture-critiques-2026-05-10.adversarial.csv  security-posture-critiques-2026-05-10.conflict.csv  security-posture-critiques-2026-05-10.csv  security-posture-solutions-2026-05-10.adversarial.csv  security-posture-solutions-2026-05-10.conflict.csv  security-posture-solutions-2026-05-10.csv  systematic-update-lessons.md  typing-audit-closeout-2026-06-05.adversarial.md  typing-audit-closeout-2026-06-05.conflict-audit.md
schemas/: agent-cai.schema.json  backup-manifest.schema.json  code-index.schema.json  delivery-receipt.schema.json  eval-suite.schema.json  handoff-payload-meta.schema.json  mcp-server.schema.json  memory-index.schema.json  model-routing.schema.json  post-production-audit-closure-gate-status.schema.json  post-production-audit-decision-replay-packet.schema.json  pr-recipient-registry.schema.json  project-description.schema.json  security-vulnerability-watch.schema.json  team-manifest.schema.json
scripts/: batch_update.py  build_advisory_pr.py  check-durable-tmp-refs.sh  check_api_doc_parity.py  daily_pipeline_digest.py  goose-openrouter-preflight.py  post_pr_reminders.py  research_ai_bad_habits.py  research_claude_code_docs.py  run_daily_bridge_maintenance.sh  run_daily_security_maintenance.sh  verify-env.py
src/: analyze.py  audit.py  drift.py  emit.py  ingest.py  man.py  render.py
templates/: PLACEHOLDER-CONVENTIONS.md  copilot-instructions.template.md  template-chapter-audit.csv  workstream-expert.template.md
tests/: _handoff_payloads_helpers.py  test_adopt_orphans.py  test_advisory.py  test_advisory_pr_workflow.py  test_agent_feature_wiring.py  test_agent_tool_scopes.py  test_agents_md_framework.py  test_ai_bad_habits.py  test_analyze.py  test_analyze_defaults.py  test_api_doc_parity.py  test_architecture.py  test_audit.py  test_auto_fence_on_update.py  test_auto_update_workflow.py  test_backup_retention.py  test_baseline.py  test_batch_update.py  test_behavioral_drift.py  test_bridge.py  test_bridge_automation.py  test_bridge_subagents.py  test_budget.py  test_build_team_option_matrix.py  test_build_team_security_gates.py  test_cicd_deployment_verification.py  test_cli_competency_reference.py  test_code_hygiene.py  test_code_index.py  test_code_index_git_hook.py  test_code_index_validation_cache.py  test_code_sources.py  test_daily_pipeline_digest.py  test_delivery_receipt.py  test_doc_structure.py  test_drift.py  test_dual_descriptor.py  test_emit.py  test_enrich_tools.py  test_eval_adapter_inspect_ai.py  (+85 more)
tmp/: commit-push-all-changes-2026-04-24.plan.md  commit-push-all-changes-2026-04-24.steps.csv
(+695 files in other folders)
